# test_library

./: .gitignore  CMakeLists.txt  README.md
doc/: CMake.ipynb  GoogleTest.ipynb  Spying_and_Mocking.ipynb
doc/images/: Mocking.drawio  Spying.drawio
src/: CMakeLists.txt  hoge.c  hoge.h  hoge_osal.c  hoge_osal.h  hoge_private.h  hoge_soal.c  hoge_soal.h
test/: CMakeLists.txt  Test_hoge.cpp  Test_hoge_mock.cpp  Test_hoge_spy.cpp
test/mock/: CMakeLists.txt  mock_osal.cpp  mock_osal.hpp
test/spy/: CMakeLists.txt  spy_hoge.c  spy_hoge.h
